1.4.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Resolved task #14219: Refactor grid drawing to be less susceptible to
  floating point inaccuracies
- Implemented feature #12897: Add the possibility to have a subtitle for
  Graphs.
- Implemented feature #11980: Provide an initial array with labels for labeled
  axis
- Implemented feature #13634: Make Offset of ezcGraphAxisRotatedLabelRenderer
  optional
- Implamented feature #14146: Add new data symbols - square and box


1.4 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.4rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #014010: Possibility to set x/y offsets for
  highlightValue. (Initial patch by Markus Lervik)


1.4beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.4alpha1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #13103: Different axes end styles.
- Implemented feature #13102: Axes not extending beyond zero in line charts
- Implemented feature #11981: Provide option for exact axis label renderer to
  put last value outside of the normal label boundings
- Fixed issue #13253: Division by zero when trying to render stacked bars.
- Fixed issue #13361: Provided workaround for ext/GD bug:
  http://bugs.php.net/45552
- Fixed issue #13595: majorStep overridden if min and max are both set


1.3 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.3rc1 - Tuesday 10 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12581: Wrong axis captions in bar charts with manual min/max
  values


1.3beta1 - Tuesday 27 May 2008